cleaned_yaml/nginx-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-project
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-project
  serviceName: {}
  template:
    metadata:
      labels:
        app: nginx-project
    spec:
      containers:
      - env: []
        image: nginx:{IMAGE_TAG}
        imagePullPolicy: IfNotPresent
        livenessProbe: {}
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe: {}
        resources: {}
        volumeMounts: []
      volumes: []
  volumeClaimTemplates: {}
