cleaned_yaml/nginx-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-project
  namespace: default
spec:
  ports:
  - name: ''
    port: 80
    targetPort: 80
  selector:
    app: nginx-project
  type: LoadBalancer
